fix overflow of quests container when logged out in overlay

--- a/src/frontend/components/UI/QuestsViewer/index.module.scss
+++ b/src/frontend/components/UI/QuestsViewer/index.module.scss
@@ -9,8 +9,9 @@
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  flex: 1;
+  flex-shrink: 1;
   max-height: 100%;
+  overflow: hidden;
 }
 
 .detailsWrapper {
